<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/red_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="25dp"
                android:background="@color/red"
                android:text="@string/red_txt_name" />

            <TextView
                android:id="@+id/orange_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="30dp"
                android:background="@color/orange"
                android:text="@string/orange_txt_name" />

            <TextView
                android:id="@+id/yellow_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="35dp"
                android:background="@color/yellow"
                android:text="@string/yellow_txt_name" />

            <TextView
                android:id="@+id/green_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="40dp"
                android:background="@color/green"
                android:text="@string/green_txt_name" />

            <TextView
                android:id="@+id/blue_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="45dp"
                android:background="@color/blue"
                android:text="@string/blue_txt_name" />

            <TextView
                android:id="@+id/indigo_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="50dp"
                android:background="@color/indigo"
                android:text="@string/indigo_txt_name" />

            <TextView
                android:id="@+id/violet_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="55dp"
                android:background="@color/violet"
                android:text="@string/violet_txt_name" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>